[gd_scene load_steps=38 format=3 uid="uid://cc1m2a1obsyn4"]

[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/character_node.gd" id="1_1jr5i"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/character_equipment_node.gd" id="2_2u3w1"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/rand_node3d.gd" id="3_jdvp7"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/interactive_node.gd" id="3_n2tmk"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/field_of_view_3d.gd" id="5_87kgs"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/light_detector.gd" id="5_swfil"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/sound_listener_3d.gd" id="5_to20h"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/damagable_3d.gd" id="6_3ihoj"]
[ext_resource type="Script" path="res://addons/tome_fps/scripts/nodes/light_detector_vp.gd" id="6_m1ik6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kp17n"]
albedo_color = Color(0.909804, 0.596078, 0, 1)
clearcoat_enabled = true
clearcoat_roughness = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jw1de"]
material = SubResource("StandardMaterial3D_kp17n")
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uy03j"]
radius = 0.4
height = 1.8

[sub_resource type="Animation" id="Animation_j8cx7"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Collision:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_ht2jk"]
resource_name = "prone"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.125, 0), Vector3(0, 0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.675, 0), Vector3(0, 0.3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.75, 1), Vector3(1, 0.3, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mesh:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.675, 0), Vector3(0, 0.3, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Mesh:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0.75, 1), Vector3(1, 0.3, 1)]
}

[sub_resource type="Animation" id="Animation_5ec5e"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.75, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.75, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.675, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Collision:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.675, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.12508, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5e5t5"]
_data = {
&"RESET": SubResource("Animation_j8cx7"),
&"prone": SubResource("Animation_ht2jk"),
&"crouch": SubResource("Animation_5ec5e")
}

[sub_resource type="PrismMesh" id="PrismMesh_pxysc"]
size = Vector3(0.65, 0.5, 0.5)

[sub_resource type="Animation" id="Animation_gh776"]
resource_name = "RESET"
length = 0.001
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bob/Camera:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_8ku67"]
resource_name = "sprint"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.2, -0.01, 0, -0.2, 0.000186046, 0.2, 0.000186046, 0.05, -0.2, -0.01, 0.2, -0.01, 0, -0.2, 0, 0.2, 0, 0.05, -0.2, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bob/Camera:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.06, -0.25, 0, 0.25, -0.01, 0, 0, 0, 0, 0, -0.06, -0.25, 0.01, 0.25, 0.01, 0, 0, 0, 0, 0, 0.06, -0.25, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_lrqmv"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.05, -0.25, 0, 0.2, 0.005, 0, -0.2, 0.000186046, 0.2, 0.000186046, -0.05, -0.2, 0.005, 0.2, 0.005, 0, -0.2, 0, 0.2, 0, -0.05, -0.2, 0.005, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bob/Camera:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, -0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 0.04, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0unb"]
_data = {
&"RESET": SubResource("Animation_gh776"),
&"sprint": SubResource("Animation_8ku67"),
&"walk": SubResource("Animation_lrqmv")
}

[sub_resource type="Animation" id="Animation_fvvjq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bob/Camera:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vsknp"]
resource_name = "land_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bob/Camera:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, -0.0174533), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s07ye"]
resource_name = "jump"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0349066, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l1rph"]
resource_name = "land_left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bob/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bob/Camera:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, 0.0174533), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeg5r"]
_data = {
&"RESET": SubResource("Animation_fvvjq"),
&"land_right": SubResource("Animation_vsknp"),
&"jump": SubResource("Animation_s07ye"),
&"land_left": SubResource("Animation_l1rph")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_3sojx"]
radius = 0.05

[sub_resource type="SphereShape3D" id="SphereShape3D_ree13"]
radius = 8.0

[sub_resource type="SphereShape3D" id="SphereShape3D_slc77"]
radius = 10.0

[sub_resource type="SphereShape3D" id="SphereShape3D_2nqq4"]
radius = 0.55

[sub_resource type="SphereShape3D" id="SphereShape3D_k4wwl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_842ok"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c21du"]
radius = 0.55
height = 1.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hcf1d"]
radius = 0.55

[sub_resource type="SphereShape3D" id="SphereShape3D_xkt2i"]
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a0a63"]

[sub_resource type="SphereMesh" id="SphereMesh_3gyuw"]
material = SubResource("StandardMaterial3D_a0a63")
radius = 0.45
height = 0.9
radial_segments = 8
rings = 8

[node name="CharacterNode" type="CharacterBody3D" groups=["Character"]]
collision_layer = 129
script = ExtResource("1_1jr5i")

[node name="NavAgent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
layers = 2
mesh = SubResource("CapsuleMesh_jw1de")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_uy03j")

[node name="CrouchAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5e5t5")
}

[node name="Equipment" type="Node3D" parent="."]
script = ExtResource("2_2u3w1")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Viser" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.3, -0.6)
layers = 2
mesh = SubResource("PrismMesh_pxysc")
skeleton = NodePath("../../Mesh")

[node name="Bob" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Camera" type="Camera3D" parent="Head/Bob"]
unique_name_in_owner = true
cull_mask = 523775
near = 0.1
far = 40.0
script = ExtResource("3_jdvp7")
position_scale = Vector3(0.1, 0.1, 0)

[node name="CameraRay" type="RayCast3D" parent="Head/Bob/Camera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -100)

[node name="HeadbobAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_o0unb")
}
blend_times = [&"RESET", &"RESET", 0.5, &"RESET", &"walk", 0.5, &"walk", &"RESET", 0.5]

[node name="JumpAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_qeg5r")
}
speed_scale = 4.0

[node name="InteractiveDetector" type="ShapeCast3D" parent="Head"]
shape = SubResource("SphereShape3D_3sojx")
target_position = Vector3(0, 0, -15)
max_results = 1
collision_mask = 769
collide_with_areas = true

[node name="FOVRay" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
top_level = true
debug_shape_custom_color = Color(0.217527, 0.771507, 0.550963, 1)
debug_shape_thickness = 4

[node name="FOV" type="Area3D" parent="Head"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 128
monitorable = false
script = ExtResource("5_87kgs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/FOV"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -7)
shape = SubResource("SphereShape3D_ree13")

[node name="SoundListener" type="Area3D" parent="Head"]
collision_layer = 16384
collision_mask = 0
monitoring = false
script = ExtResource("5_to20h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/SoundListener"]
shape = SubResource("SphereShape3D_slc77")

[node name="HeadHealth" type="Area3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
collision_layer = 32
collision_mask = 0
monitoring = false
script = ExtResource("6_3ihoj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/HeadHealth"]
shape = SubResource("SphereShape3D_2nqq4")

[node name="CrawlCeilingDetection" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_k4wwl")
target_position = Vector3(0, 0.5, 0)
max_results = 1

[node name="ProneCeilingDetection" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.75, 0, 0, 0, 1, 0, 0.45, 0)
shape = SubResource("CapsuleShape3D_842ok")
target_position = Vector3(0, 0.45, 0)
max_results = 1

[node name="BodyHealth" type="Area3D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_3ihoj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BodyHealth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CapsuleShape3D_c21du")

[node name="Interactive" type="Area3D" parent="." node_paths=PackedStringArray("mesh")]
collision_layer = 768
collision_mask = 0
monitoring = false
script = ExtResource("3_n2tmk")
label = "Talk"
mesh = NodePath("../Mesh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactive"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_hcf1d")

[node name="LightDetectorRays" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8192
monitoring = false
monitorable = false
script = ExtResource("5_swfil")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LightDetectorRays"]
shape = SubResource("SphereShape3D_xkt2i")

[node name="RayCast3D" type="RayCast3D" parent="LightDetectorRays"]
collide_with_areas = true

[node name="LightDetectorVP" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(8, 8)
render_target_clear_mode = 1
render_target_update_mode = 4
script = ExtResource("6_m1ik6")

[node name="Sphere" type="MeshInstance3D" parent="LightDetectorVP"]
layers = 524288
mesh = SubResource("SphereMesh_3gyuw")

[node name="TopCamera" type="Camera3D" parent="LightDetectorVP/Sphere"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
cull_mask = 524289
projection = 1
current = true
size = 0.8
far = 5.0

[node name="BottomCamera" type="Camera3D" parent="LightDetectorVP/Sphere"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1, 0)
cull_mask = 524289
projection = 1
current = true
size = 0.8
far = 5.0
